Try to fix image alignment at max width

--- a/public/styles.css
+++ b/public/styles.css
@@ -124,9 +124,10 @@ figure {
 
 figure img {
   display: inline;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-figure img,
 .centered-tweet {
   margin: 20px;
 }
